chore: improve deploy workflow to not upload extra files

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -25,10 +25,15 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
+      - name: Prepare deployment files
+        run: |
+          mkdir -p public
+          cp ./Fundamentos/PSeint/index.html public/
+          cp ./Fundamentos/PSeint/styles.css public/
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: "./Fundamentos/PSeint"
+          path: "./public"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
